# onyx_anim

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_decode.cc
codecs/: CMakeLists.txt
codecs/include/onyx_anim/codecs/: register_codecs.hh
codecs/src/: amiga_anim.cc  amiga_anim.hh  atari_seq.cc  atari_seq.hh  bink.cc  bink.hh  cdxl.cc  cdxl.hh  codec_common.hh  dpan.cc  dpan.hh  flc.cc  flc.hh  register_codecs.cc  smk.cc  smk.hh  yafa.cc  yafa.hh
codecs/src/amiga_anim/: CMakeLists.txt
codecs/src/amiga_anim/include/anim/: decoders.hh  header.hh  types.hh
codecs/src/amiga_anim/src/: decoders.cc  header.cc
codecs/src/atari_seq/: CMakeLists.txt
codecs/src/atari_seq/include/atari_seq/: decoders.hh  header.hh  types.hh
codecs/src/atari_seq/src/: decoders.cc  header.cc
codecs/src/bink/: CMakeLists.txt
codecs/src/bink/include/bink/: audio.hh  bit_reader.hh  bundle.hh  data.hh  decoders.hh  header.hh  idct.hh  tree.hh  types.hh  vlc.hh
codecs/src/bink/src/: audio.cc  bundle.cc  decoders.cc  header.cc  idct.cc  tree.cc  vlc.cc
codecs/src/bytes/: CMakeLists.txt
codecs/src/bytes/include/bytes/: bit_reader.hh  bytes.hh
codecs/src/cdxl/: CMakeLists.txt
codecs/src/cdxl/include/cdxl/: header.hh  types.hh
codecs/src/cdxl/src/: header.cc
codecs/src/dpan/: CMakeLists.txt
codecs/src/dpan/include/dpan/: decoders.hh  header.hh  types.hh
codecs/src/dpan/src/: decoders.cc  header.cc
codecs/src/flc/: CMakeLists.txt
codecs/src/flc/include/flc/: chunks.hh  decoders.hh  header.hh  types.hh
codecs/src/flc/src/: chunks.cc  decoders.cc  header.cc
codecs/src/smk/: CMakeLists.txt
codecs/src/smk/include/smk/: bit_reader.hh  decoders.hh  header.hh  huffman.hh  types.hh
codecs/src/smk/src/: decoders.cc  header.cc  huffman.cc
codecs/src/yafa/: CMakeLists.txt
codecs/src/yafa/include/yafa/: decoders.hh  header.hh  types.hh
codecs/src/yafa/src/: decoders.cc  header.cc
data/amiga-anim/: Esprita.sndanim  Gressklippermannen  Wz.sndanim  anim3_1bpp.anim  anim3_ham6.anim  anim5_ham6.anim  anim5_ham8.anim  anim74_ChristmasCard  anim74_Cucug.anim  anim74_Doctor_A  anim74_LASERBOING  anim74_NotBoingAgain  anim74_Rings.Movie  anim74_spigot  anim7l_1bpp.anim  anim7l_8bpp.anim  anim7l_ham6.anim  anim7l_ham8.anim  anim7s_1bpp.anim  anim7s_8bpp.anim  anim7s_ham6.anim  anim7s_ham8.anim  anim8l_1bpp.anim  anim8l_8bpp.anim  anim8l_ham6.anim  anim8l_ham8.anim  anim8s_1bpp.anim  anim8s_8bpp.anim  anim8s_ham6.anim  anim8s_ham8.anim  animJ_5bpp.anim  animJ_5bpp_2.anim  animJ_ham6.anim
data/atari-seq/: 00_INDEX.TXT  B1.SEQ  CAR.SEQ  DEJA_VU.SEQ  DINO_HEL.SEQ  DMMARBLE.SEQ  FROGGIE.SEQ  GOLF.SEQ  GUNSHIP.SEQ  JRI.SEQ  LAMP.SEQ  MANTA_2.SEQ  MINDS10.SEQ  PROJECT1.SEQ  PT7_STEP.SEQ  RUBIK_2.SEQ  RUBIK_2.TXT  R_PLANE.SEQ  SCANNED.SEQ  SKYFALL.SEQ  SKYFALL.TXT  TECDELIT.SEQ  UNICYCLE.SEQ  VISITOR.SEQ
data/atari-seq/4CYCLE/: ENGINE.SEQ  ENGINE.SEQ.anim  index.html
data/atari-seq/ANGEL/: READ_ME  index.html
data/atari-seq/BARBPOLE/: POLE3.SEQ  POLE3.TXT  index.html
data/atari-seq/BARBSHOP/: BSHOP2.SEQ  BSHOP2.TXT  index.html
data/atari-seq/CHESS1/: CHESS1.RUN  CHESS1.SEQ  index.html
data/atari-seq/COLAWARS/: COLA_WAR.AVS  CW_00.SEQ  CW_01.SPL  CW_02.SPL  CW_03.SPL  CW_04.SPL  CW_05.SPL  CW_06.SPL  index.html
data/atari-seq/DESKVID/: ATDSKVID.SPC  NUM2.SPC  NUM3.SPC  NUM4.SPC  NUM5.SPC  NUM6.SPC  NUM7.SPC  NUM8.SPC  NUM9.SPC  READ_ME.TXT  SPEC_FX.RUN  SPSLIDE7.PRG  index.html
data/atari-seq/DP_SHTTL/: READ_ME.DOC  SHUTTL1S.SEQ  SHUTTL5S.SEQ  index.html
data/atari-seq/DUKE/: index.html
data/atari-seq/FORK/: FORK.SEQ  index.html
data/atari-seq/GUNFIGHT/: AVSPLAYR.PRG  BLOW.SPL  CLICK.5K  GUNFIGHT.AVS  GUNSHOT.SPL  README.TXT  SHOWDOWN.SEQ  TALK1.SEQ  TALK2.SEQ  TALK3.SEQ  THUD.SPL  index.html
data/atari-seq/HAND/: index.html
data/atari-seq/HARVEY/: HARVEY.DOC  index.html
data/atari-seq/HELECOPT/: MANWPRO4.SEQ  index.html
data/bink/: DEFENDALL.BIK  OpenPt1.bik  end_victory.bik  logo_lucas.bik
data/cdxl/: Discovery.CDXL  Fruit.CDXL  Maku.XL  callnow.xl  optologo.cdxl  sub.xl
data/deluxe/: HORSE.ANM  LIGHT3D.001  PRESENT.GAM  SW.ANM  TITLES4B.001  Vrs.anm  abydos.lpf.anim
data/fli-flc/: md5sum  test2.fli.txt  x12b.fli
data/grasp/: 1ON2.GL  3DROTAT1.GL  ALLTOONS.GL  AMDEK.GL  ANALRIDE.GL  BATMAN.GL  CGADOG.GL  CITYLIFE.GL  GOBLET4.GL  GRAFX.GL  GULFWAR.GL  HDRIVE.GL  HYAPAT2.GL  JUGGLER.GL  LNHARDY.GL  MAID.GL  MANDEL3.GL  MARBLE1.GL  MAXIHEAD.GL  MELT.GL  MTV2.GL  NASTY.GL  PAINTDMO.GL  PCL.GL  PHILLY.GL  PITCH.GL  ROBOCOP.GL  SPACEY.GL  TURKEY.GL  V7VGA.GL  VGAPICS.GL  WILTROUT.GL  XMASCARD.GL  Z1.GL
data/smacker/: EARTH.SMK  FMAN.SMK  SPLASH.SMK  WMAN.SMK  intro.smk  test.smk
data/yafa/: 1649768106_b.yafa  a.yafa  b.yafa  lightball.yafa  subspace.yafa  t15.16.yafa  t15.yafa  transition_09-10.yafa  transition_12-13.yafa  underwater.yafa  wuerfel.yafa
docs/flc/: flic.htm
docs/yafa/: YAFA-doc.guide  YAFA-doc.txt
examples/: CMakeLists.txt  anim_dump_audio.cc  anim_to_ppm.cc  flc_to_ppm.cc  info.cc  seq_to_ppm.cc
examples/anim_player/: CMakeLists.txt  anim_player.cc
player/: CMakeLists.txt
player/include/onyx_anim/player/: cpu_surface.hh  player.hh
player/src/: player.cc
scripts/: amiga_anim_cross_check.sh  atari_seq_cross_check.sh  bink_cross_check.sh  cdxl_cross_check.sh  dpan_cross_check.sh  flc_cross_check.sh  smk_cross_check.sh
sdk/: CMakeLists.txt
sdk/include/onyx_anim/sdk/: codec_registry.hh  convert.hh  decoder.hh  expected.hh  frame_clock.hh  probe.hh  types.hh
sdk/src/: codec_registry.cc  convert.cc  decoder.cc  frame_clock.cc  probe.cc
test/: CMakeLists.txt  test_amiga_anim_audio.cc  test_atari_seq.cc  test_bink.cc  test_bytes.cc  test_cdxl.cc  test_convert.cc  test_cpu_surface.cc  test_dpan.cc  test_expected.cc  test_flc_endtoend.cc  test_frame_clock.cc  test_main.cc  test_player.cc  test_probe.cc  test_registry.cc  test_smk.cc  test_sniff.cc  test_yafa.cc
test/flc/: test_chunks.cc  test_decoders.cc  test_header.cc
tools/seqref/: SeqDumpChunky.java  SeqDumpPlanar.java  SeqToPpm.java
(+27 files in other folders)
